✨ feat(core): Use LazyOptional for network access
This commit refactors various parts of the code to use LazyOptional for network access. This defers the retrieval of network components until they are actually needed, improving performance and reducing unnecessary lookups.

Key changes:
- Replaces direct retrieval of capabilities with LazyOptional.
- Updates network helper methods to return LazyOptional.
- Adjusts code that accesses network components to handle LazyOptional.